added last update for main

--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,7 +1,7 @@
 @mixin rubik12Medium {
   font-family: "Rubik", sans-serif;
   font-size: 12px;
-  font: 400;
+  font-weight: 400;
 }
 @mixin rubik14Normal {
   font-family: "Rubik", sans-serif;
