--- a/src/App.scss
+++ b/src/App.scss
@@ -4,7 +4,7 @@
 .mainBackground {
   width: 100vw;
   height: 100vh;
-  background-image: url(./assets//mainBackground.png);
+  background-image: url(./assets/mainBackground.png);
   background-repeat: no-repeat;
   background-position: unset;
   background-size: cover;
