--- a/src/containers/NavBar/styles.scss
+++ b/src/containers/NavBar/styles.scss
@@ -47,7 +47,7 @@
   background-repeat: no-repeat;
   background-position: unset;
   background-size: cover;
-  border-radius: 30px 0px 0px 30px;
+  border-radius: 30px 0 0 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
