added scroll for smaller display

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,7 @@
 .mainBackground {
   width: 100vw;
   height: 100vh;
+  min-height: 700px;
   background-image: url(./assets/mainBackground.png);
   background-repeat: no-repeat;
   background-position: unset;
